# detection

./: README.md
detection/: CMakeLists.txt  package.xml
detection_control/: CMakeLists.txt  package.xml
detection_control/config/: detection_control_params.yaml
detection_control/launch/: detection_full.launch
detection_control/src/: control_from_detection.py
detection_messages/: CMakeLists.txt  package.xml
detection_messages/msg/: DetectionTracked.msg  DetectionTrackedArray.msg
detection_msgs/: CMakeLists.txt  README.md  package.xml
detection_msgs/msg/: Box.msg  Detection.msg
detection_yolo/: CMakeLists.txt  README.md  package.xml
detection_yolo/config/: bounding_box_to_cuboid_params.yaml  darknet_ros_config.yaml  yolov3.yaml
detection_yolo/launch/: test_detection.launch  yolo_object_depth_detection.launch  yolo_object_detection.launch
detection_yolo/rviz/: yolo_detection.rviz
detection_yolo/src/: bounding_box_to_cuboid.py  detection_visualisation.py
