<?xml version="1.0"?>
<package format="2">
  <name>detection_control</name>
  <version>0.0.1</version>
  <description>A package controlling a robot from detection messages</description>
  <maintainer email="mla138@uclive.ac.nz">Max Andrew</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
