<?xml version="1.0"?>
<package format="2">
  <name>detection_messages</name>
  <version>0.0.1</version>
  <description>A package for defining ros messages used for object detection</description>
  <maintainer email="mla138@uclive.ac.nz">Max Andrew</maintainer>
  <author>Max Andrew</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export></export>
</package>
